Botões na lateral

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,3 +40,32 @@ background:  url('../imagens/frame-iphone.png') no-repeat;
 section#redes-sociais{
 
 }
+
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+
+    width: 268px;
+    height: 471px;
+}
+
+section#redes-sociais{
+    text-align: right;
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.821);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.400);
+    transition: transform .3s, border 1s;
+}
+
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box; /* a borda faz parte da caixinha da rede-social*/
+   
+}
